
Fixes:

- Revolutionaries JE not able to activate.

Release 1.0.2 "Snake"

Changes:

- Traditional Chinese translation.
- Change Huang Xing's religion to protestant.
- Added Taiwanese indigenous peoples as a decentralized country.
- Made Xianfeng progress bar to be more balanced.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4/edit?usp=sharing

- MOHB-0002
- Prevent creating Huang Xing and Qiu Jin as child characters.
- Weak Republicans je not able to activate.
- Macau and Manchester Tag duplication.

Release 1.1 "Knight"
Game version 1.9 compatibility.

Changes:

- New character: Yung Wing.
- Remake plague pandemic using harvest condition. (May change at any time)
- Channel Force into Valor JE.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4

- MOHB-0006
- MOHB-0003
- MOHB-0004
- MOHB-0005

Release 1.1.1 "Knight"

Changes:

- The infamy will decay faster during the Warlord Era.
- Optimized default ai strategy.
- Removed Character: Hou Debang. (Morgenrote updates so fast)
- Great Britain will open Qing's market during the Opium Wars.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4

- MOHB-0007
- AI values in scripted buttons.
- Compatibility of companies.
- Encoding issues.

Release 1.1.2 "Knight"

Changes:

- New random event: South Great Wall fixing.
- New treaty article: Ban boxer rebellion.
- New characters: Feng Guifen, Bao Shichen, Wu Chongyao.
- New law variants: Imperial Examination System, Night Watchmen.
- New company: Commercial Press.
- Boxer Rebellion remake.
- New country: Shanghai International Settlement.
- New state trait: Dragon Rise Land, Savage Land.

Fixes:
Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4

- MOHB-0012
- MOHB-0008
- Ruan Yuan's Chinese localization.
- Wrong modifier time (very_long_modifier_time)
- MOHB-0010