@@ -977,3 +977,20 @@ SHANGHAI_subject = {
 		instance = { scale = { 0.5 0.5 } position = { 0.775 0.8 } }
 	}
 }
+
+YETTESHEHER = {
+	pattern = "pattern_solid.tga"
+	color1 = "red"
+
+	colored_emblem = {
+		texture = "ce_crescent_rotated.dds"
+		color1 = "white"
+		instance = { scale = { -0.6 0.6 } position = { 0.5 0.5 } }
+	}
+	colored_emblem = {
+		texture = "ce_star_08_eureka.dds"
+		color1 = "white"
+		color2 = "white"
+		instance = { scale = { 0.2 0.2 } position = { 0.47 0.47 } rotation = 1 }
+	}
+}
