@@ -38,3 +38,11 @@ SHANGHAI = {
 
 	ai_will_do = { always = no }
 }
+
+YETTESHEHER = {
+	states = {
+		STATE_TIANSHAN
+	}
+
+	ai_will_do = { always = no }
+}
