@@ -520,3 +520,14 @@ SHANGHAI = {
 		overlord_canton_scale = { @canton_scale_cross_x @canton_scale_cross_y }
     }
 }
+
+YETTESHEHER = {
+    # Yettesheher
+    flag_definition = {
+        coa = YETTESHEHER
+        subject_canton = YETTESHEHER
+        # allow_overlord_canton = yes
+        coa_with_overlord_canton = YETTESHEHER_subject
+        priority = 1
+    }
+}
