@@ -3,5 +3,5 @@
   moh_tibet_look_for_new_dalai_lama_desc: "If the former Dalai Lama has passed away, the reincarnation of the Dalai Lama must be found."
   moh_tibet_look_for_new_dalai_lama_tooltip: "Look for the reincarnation of the Dalai Lama"
   moh_qing_shanhai_pass: "Open the Shanhai Pass"
-  moh_qing_shanhai_pass_desc: "Since the establishment of our nation, we have kept the Shanhai Pass closed to organize personnel from within to enter the 'Dragon Rise Land'. Given the increasingly severe situation, it is now time to reopen the Shanhai Pass."
+  moh_qing_shanhai_pass_desc: "Since the establishment of our nation, we have kept the Shanhai Pass closed to avoid personnel from within to enter the 'Dragon Rise Land'. Given the increasingly severe situation, it is now time to reopen the Shanhai Pass."
   moh_qing_shanhai_pass_tooltip: "Open the Shanhai Pass"
