@@ -201,3 +201,7 @@
   je_channel_force_into_valor: "Channel Force into Valor"
   je_channel_force_into_valor_reason: "#italic Hua Bing Wei Yong#! was emerged in response to the [ROOT.GetCountry.GetAdjectiveNoFormatting] government's need to reorganize the Green Standard Army and was also closely related to the growing awareness of strengthening the military to resist foreign aggression."
   channel_force_into_valor_on_complete_tt: "We are one step closer to modernizing the army."
+  je_reconquest_of_the_west: "Reconquest of the West"
+  je_reconquest_of_the_west_reason: "...The rebels have even sought help from the Kokand. If we withdraw our defenses, they will only advance further."
+  je_reconquest_of_the_west_gansu_hui_rebellion_tt: "The Gansu Hui Rebellion broke out."
+  je_reconquest_of_the_west_yettesheher_destroyed_tt: "[SCOPE.sCountry('yettesheher_scope').GetName] does not exist"
