@@ -126,6 +126,7 @@
   moh_Sho: "Sho"
   Cuqicuq: "Cuqicuq"
   Garuljigulj: "Garuljigulj"
+  Yakub_Beg: "Yakub Beg"
 
     # Communists
   moh_Bo: "Bo"
