@@ -13,8 +13,10 @@
   HBE_ADJ: "湖北"
   RYU: "琉球"
   RYU_ADJ: "琉球"
-  SHANGHAI: "[GetStateRegion('STATE_SUZHOU').GetCityHubName]公共租界"
-  SHANGHAI_ADJ: "[GetStateRegion('STATE_SUZHOU').GetCityHubName]"
+  SHANGHAI: "$HUB_NAME_STATE_SUZHOU_city$公共租界"
+  SHANGHAI_ADJ: "公共租界"
+  YETTESHEHER: "哲德沙尔"
+  YETTESHEHER_ADJ: "哲德沙尔"
   dyn_c_dongbei_army: "东北军"
   dyn_c_dongbei_army_adj: "东北军"
   dyn_c_anguo: "安国军"
