@@ -3,5 +3,5 @@
   moh_tibet_look_for_new_dalai_lama_desc: "若达赖喇嘛圆寂，我们将可以寻找新的达赖喇嘛转世。"
   moh_tibet_look_for_new_dalai_lama_tooltip: "寻找达赖喇嘛转世"
   moh_qing_shanhai_pass: "开放山海关"
-  moh_qing_shanhai_pass_desc: "自立国以来，我们一直关闭山海关以组织关内人员进入“龙兴之地”，鉴于日益严峻的形势，现在是时候重新开放山海关了。"
+  moh_qing_shanhai_pass_desc: "自立国以来，我们一直关闭山海关以阻止关内人员“闯关东”进入“龙兴之地”，鉴于日益严峻的形势，现在是时候重新开放山海关了。"
   moh_qing_shanhai_pass_tooltip: "开放山海关"
