@@ -136,6 +136,7 @@
   moh_Sho: "尚"
   Cuqicuq: "卓杞笃"
   Garuljigulj: "卡珞利谷"
+  Yakub_Beg: "阿古柏"
 
   # Communists
   moh_Bo: "博"
