@@ -335,12 +335,13 @@ Changes:
 
 - New random event: South Great Wall fixing.
 - New treaty article: Ban boxer rebellion.
-- New characters: Feng Guifen, Bao Shichen, Wu Chongyao.
+- New characters: Feng Guifen, Bao Shichen, Wu Chongyao, Muhammad Yakub Beg.
 - New law variants: Imperial Examination System, Night Watchmen.
 - New company: Commercial Press.
 - Boxer Rebellion remake.
 - New country: Shanghai International Settlement.
 - New state trait: Dragon Rise Land, Savage Land.
+- Reconquest of the west remake.
 
 Fixes:
 Bug tracker: https://docs.google.com/spreadsheets/d/1DxeDoLNYQ_w6A9lTuLCGRS_YDDrDTNyj7nB7XQQp6z4
